# numeraz

./: .gitignore  .pre-commit-config.yaml  README.md  action.yml  conda.yml  config.py  environment.yml  prepare_data.py  pyproject.toml  setup_aml.sh  setup_naz.sh
.github/workflows/: model_training.yml  pipeline-model_training.yml  pytest-core.yml  pytests.yml  setup.yml
scripts/: config.py  setup_aml.sh
src/: __init__.py  api.py  cli.py  config.py  create_data_asset.py  pipelines.py  utils.py
src/components/: __init__.py  build_prod_model.py  build_prod_model_aenc.py  create_data_asset.py  encode_features.py  evaluate_ensembles.py  preprocess_data.py  train_base_models.py
src/core/: evaluation.py  model.py  preprocessing.py
src/jobs/: __init__.py  create_data_asset.py  create_data_assets.py  tune_hparams.py
src/scripts/: create_data_asset.py  create_model.py  utils.py
src/scripts/components/: TMP_evaluate.py  TMP_numerai  TMP_preprocess.py  TMP_register.py  TMP_train.py  __init__.py
tests/: test_config.py  test_utils.py
tests/core/: test_evaluation.py  test_model.py  test_preprocessing.py
tests/core/examples/: model_corrs.json  predictions.csv
tests/src/: test_api.py  test_cli.py  test_pipelines.py
