[project]
name = "numeraz"
version = "0.1.1"
description = "Numerai Model Development with Azure ML"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-ai-ml>=1.22.4",
    "azureml-fsspec>=1.3.1",
    "azureml-mlflow>=1.58.0",
    "click>=8.1.7",
    "cloudpickle>=2.2.1",
    "lightgbm>=4.5.0",
    "mlflow>=2.18.0",
    "numerai-tools>=0.2.3",
    "numerapi>=2.19.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::marshmallow.warnings.RemovedInMarshmallow4Warning",
]

[project.scripts]
naz = "cli:cli"
